# InvisiblePersistence

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MULTI_CHAIN_SETUP.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  docker-compose.yml  hardhat.config.js  package.json
config/: dex.example.json  tokens.example.json
contracts/: FlashloanArbitrage.sol
contracts/interfaces/: IERC20.sol
docs/: API.md  SETUP.md  STRATEGY.md  UML_DIAGRAMS.md
examples/: basic-usage.js  manual-trade.js  monitor-prices.js
liquidation-bot/: Cargo.toml  GUIDE.md  README.md  config.example.toml
liquidation-bot/src/: bot.rs  config.rs  health_calculator.rs  lib.rs  liquidator.rs  main.rs  metrics.rs  monitor.rs  price_feed.rs  types.rs
liquidation-bot/src/protocols/: kamino.rs  mango.rs  mod.rs  port.rs  solend.rs
nft-mint-bot/: Cargo.toml  GUIDE.md  README.md  config.example.toml
nft-mint-bot/src/: bot.rs  candy_machine.rs  config.rs  lib.rs  main.rs  metrics.rs  mint_executor.rs  monitor.rs  types.rs  wallet_manager.rs
sandwich-bot/: BEST_PRACTICES.md  Cargo.toml  GUIDE.md  README.md  config.example.toml
sandwich-bot/src/: bot.rs  config.rs  executor.rs  lib.rs  main.rs  mempool.rs  metrics.rs  opportunity.rs  types.rs  utils.rs
scripts/: check-setup.js  deploy.js  setup.sh
src/: index.js
src/abis/: FlashloanArbitrage.json
src/bot/: ArbitrageBot.js
src/config/: chains.js  config.js
src/services/: GasEstimator.js  PriceFetcher.js  ProfitCalculator.js  TelegramNotifier.js
src/utils/: SafetyChecks.js  logger.js
