[package]
name = "nft-mint-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-speed NFT minting bot for Solana"
license = "MIT"

[dependencies]
# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
anchor-client = "0.29"
mpl-token-metadata = "3.2"
mpl-candy-machine-core = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
bs58 = "0.5"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

